# MiniAppCalendar

./: .gitignore  README.md  dlgabout.ui  document.cpp  document.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memodialog.cpp  memodialog.h
.github/workflows/: build.yml  linux_release.yml  windows_release.yml
linux/: MiniAppCalendar.desktop
src/: CMakeLists.txt  MiniAppCalendar.pro  MiniAppCalendar.qrc  MiniAppCalendar.rc  README.md  dlgabout.ui  document.cpp  document.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memodialog.cpp  memodialog.h  month.cpp  month.h  textedit.cpp  textedit.h  translate
translations/: translation_fr.qm  translation_fr.ts
